fix contrast

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,4 +9,4 @@ $button-danger-hover: rgb(87, 29, 29);
 
 $font-light: white;
 $font-middle: grey;
-$font-dark: black;
+$font-dark: rgb(37, 37, 37);
